[tool.poetry]
name = "test_fastapi"
version = "0.1.0"
description = "A simple test with FastAPI and Poetry"
authors = ["leblancfg"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {extras = ["all"], version = "^0.47.1"}
python-multipart = "^0.0.5"
autocrop = "^1.0.0"
aiofiles = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
